--- a/MvcPractice/app/design/Frontend/Template/Core/1column.phtml
+++ b/MvcPractice/app/design/Frontend/Template/Core/1column.phtml
@@ -9,12 +9,18 @@
 </head>
 
 <body>
-    
-<div><?php echo $this->getChildHtml('header') ?></div>
-<div><?php echo $this->getChildHtml('content') ?></div>
-<div><?php echo $this->getChildHtml('footer') ?></div>
-    
-    
+    <div>
+        <?php echo $this->getChildHtml('header') ?>
+    </div>
+    <div>
+        <?php echo ($this->getChildHtml('messages')); ?>
+    </div>
+    <div>
+        <?php echo $this->getChildHtml('content') ?>
+    </div>
+    <div>
+        <?php echo $this->getChildHtml('footer') ?>
+    </div>
 </body>
 
 </html>
