--- a/MvcPractice/app/design/Frontend/Template/page/content.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/content.phtml
@@ -1,9 +1,10 @@
 <?php
-$this->getRequest()->getParams('pid');
-$productModel = Mage::getModel('product/product')->load(1);
-echo '<pre>';
-print_r($productModel->getId());
-print_r($productModel->getProductName());
-print_r($productModel->getSku());
-print_r($productModel);
+// $this->getRequest()->getParams('pid');
+// $productModel = Mage::getModel('catalog/product')->load(1);
+// echo '<pre>';
+// print_r($productModel->getId());
+// print_r($productModel->getProductName());
+// print_r($productModel->getSku());
+// print_r($productModel);
+echo $this->getChildHtml('');
 ?>
