--- a/MvcPractice/app/design/Frontend/Template/page/head.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/head.phtml
@@ -8,7 +8,6 @@
 <?php $css = $this->getCss(); ?>
 <?php if (count($css) > 0): ?>
     <?php foreach ($css as $_css): ?>
-        <!-- <link rel="stylesheet" href="<?php echo $_css ?>"> -->
-        <style src="<?php echo $_css ?>"></style>
+        <link rel="stylesheet" href="<?php echo $_css ?>">
     <?php endforeach; ?>
 <?php endif; ?>
