Css_Update_Delete

--- a/MvcPractice/app/design/Frontend/Template/Core/1column.phtml
+++ b/MvcPractice/app/design/Frontend/Template/Core/1column.phtml
@@ -15,7 +15,7 @@
     <div class="content">
         <?php echo $this->getChildHtml('content'); ?>
     </div>
-    <div class="footer">
+    <div class="footer1">
         <?php echo $this->getChildHtml('footer'); ?>
     </div>
 
