--- a/MvcPractice/app/design/Frontend/Template/page/footer.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/footer.phtml
@@ -41,5 +41,11 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <div class="copyright">
+            <h4>
+                © 2024 by Shopex.com All Rights Reserved
+            </h4>
+        </div>
     </div>
 </footer>
