--- a/MvcPractice/app/skin/css/header.css
+++ b/MvcPractice/app/skin/css/header.css
@@ -1,24 +1,19 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
-
 nav {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
+    background-image: linear-gradient(#d6dfde 90%, #d6dfde 10%, transparent);
+    color: #3e6765;
     display: flex;
     align-items: center;
+    padding: 10px;
+    /* background-color: #f4f4f4; */
     /* Center items vertically in the flex container */
 }
 
 nav img {
-    max-height: 64px;
+    max-height: 75px;
     margin-right: 24px;
-    width: 89px;
-    border-radius: 50%
+    width: 107px;
+    margin-left: 24px;
+    margin-bottom: 5px
 }
 
 nav ul {
@@ -35,13 +30,14 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #fff;
+    color: #3e6765;
     padding: 10px;
     display: block;
+    /* background-color: #d6dfde; */
 }
 
 nav ul li:hover {
-    background-color: #555;
+    color: #e11b1b;
 }
 
 nav ul ul {
@@ -49,7 +45,7 @@ nav ul ul {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #333;
+    background-color: #d6dfde;
     border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
