--- a/MvcPractice/app/design/Frontend/Template/catalog/admin/Product/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/admin/Product/form.phtml
@@ -1,73 +1,93 @@
+<?php
+$product = $this->getProduct();
+?>
+
 <div class="box">
     <div class="container">
         <div class="title">Product Information</div>
         <div class="content">
             <form action=<?php echo $this->getUrl('admin/catalog_product/save') ?> method="post">
+                <input type="hidden" id="product_id" name="catalog_product[product_id]"
+                    value="<?php echo $product->getProductId() ?>">
                 <div class="user-details">
                     <div class="form-group">
                         <label for="sku" class="details">Sku </label>
                         <input type="textbox" class="form-control" id="sku" name="catalog_product[sku]"
-                            placeholder="Enter sku">
+                            value="<?php echo $product->getSku() ?>" placeholder="Enter sku">
                     </div>
                     <div class="form-group">
                         <label for="name" class="details">Name</label>
                         <input type="textbox" class="form-control" id="name" name="catalog_product[name]"
-                            placeholder="Enter name">
+                            value="<?php echo $product->getName() ?>" placeholder="Enter name">
                     </div>
                     <div class="form-group ">
                         <label for="color" class="details">Color</label>
                         <input type="textbox" class="form-control" id="color" name="catalog_product[color]"
-                            placeholder="Enter color">
+                            value="<?php echo $product->getColor() ?>" placeholder="Enter color">
                     </div>
                     <div class="form-group ">
                         <label for="size" class="details">Size</label>
                         <input type="textbox" class="form-control" id="size" name="catalog_product[size]"
-                            placeholder="Enter size">
+                            value="<?php echo $product->getSize() ?>" placeholder="Enter size">
                     </div>
                     <div class="form-group ">
                         <label for="description" class="details">Description</label>
                         <textarea class="form-control" id="description" name="catalog_product[description]"
-                            placeholder="Enter description" cols="30" rows="5"></textarea>
+                            placeholder="Enter description" cols="30" rows="5">
+                            <?php echo $product->getDescription() ?>
+                        </textarea>
                     </div>
                     <div class="form-group ">
                         <label for="image_link" class="details">image link</label>
                         <input type="file" class="form-control" id="image_link" name="catalog_product[image_link]"
-                            placeholder="Enter image link">
+                            value="<?php echo $product->getImageLink() ?>" placeholder="Enter image link">
                     </div>
                     <div class="form-group ">
                         <label for="link" class="details">Link</label>
                         <input type="file" class="form-control" id="link" name="catalog_product[link]"
-                            placeholder="Enter link">
+                            value="<?php echo $product->getLink() ?>" placeholder="Enter link">
+                    </div>
+                    <div class="form-group ">
+                        <label for="category_id" class="details">Category Id</label>
+                        <input type="number" class="form-control" id="category_id" name="catalog_product[category_id]"
+                            value="<?php echo $product->getCategoryId() ?>" placeholder="Enter category id">
+                    </div>
+                    <div class="form-group ">
+                        <label for="price" class="details">Price</label>
+                        <input type="number" class="form-control" id="price" name="catalog_product[price]"
+                            value="<?php echo $product->getPrice() ?>" placeholder="Enter Price">
                     </div>
                     <div class="form-group ">
                         <label for="mfr_cost" class="details">MFR cost</label>
                         <input type="number" class="form-control" id="mfr_cost" name="catalog_product[mfr_cost]"
-                            placeholder="Enter mfr cost">
+                            value="<?php echo $product->getMfrCost() ?>" placeholder="Enter mfr cost">
                     </div>
                     <div class="form-group ">
                         <label for="shipping_cost" class="details">Shipping cost</label>
                         <input type="number" class="form-control" id="shipping_cost"
-                            name="catalog_product[shipping_cost]" placeholder="Enter shipping cost">
+                            name="catalog_product[shipping_cost]" value="<?php echo $product->getShippingCost() ?>"
+                            placeholder="Enter shipping cost">
                     </div>
                     <div class="form-group ">
                         <label for="total_cost" class="details">Total cost</label>
                         <input type="number" class="form-control" id="total_cost" name="catalog_product[total_cost]"
-                            placeholder="Enter total cost">
+                            value="<?php echo $product->getTotalCost() ?>" placeholder="Enter total cost">
                     </div>
                     <div class="form-group ">
                         <label for="margin_percentage" class="details">Margin Percentage</label>
                         <input type="number" class="form-control" id="margin_percentage"
-                            name="catalog_product[margin_percentage]" placeholder="Enter Margin Percentage">
+                            name="catalog_product[margin_percentage]"
+                            value="<?php echo $product->getMarginPercentage() ?>" placeholder="Enter Margin Percentage">
                     </div>
                     <div class="form-group ">
                         <label for="min_price" class="details">Min price</label>
                         <input type="number" class="form-control" id="min_price" name="catalog_product[min_price]"
-                            placeholder="Enter min price">
+                            value="<?php echo $product->getMinPrice() ?>" placeholder="Enter min price">
                     </div>
                     <div class="form-group ">
                         <label for="status" class="details">Status</label>
                         <input type="number" class="form-control" id="status" name="catalog_product[status]"
-                            placeholder="Enter status">
+                            value="<?php echo $product->getStatus() ?>" placeholder="Enter status">
                     </div>
                 </div>
                 <div class="button">
