--- a/MvcPractice/app/design/Frontend/Template/catalog/admin/Category/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/admin/Category/form.phtml
@@ -17,12 +17,12 @@ $category = $this->getCategory();
                     </div>
                     <div class="form-group">
                         <label for="status" class="details">Status</label>
-                        <select id="status" name="catalog_product[status]" value="<?php echo $category->getStatus() ?>"
+                        <select id="status" class="form-control" name="catalog_category[status]" ?>"
                             class="form-control">
                             <?php
-                            $status = ["-- select --", "Enabled", "Disabled"];
-                            foreach ($status as $item) {
-                                echo '<option value="' . $item . '" ' . (($category->getStatus() == $item) ? 'selected' : '') . '>' . $item . '</option>';
+                            $status = [1 => "Enabled", 0 => "Disabled"];
+                            foreach ($status as $key => $item) {
+                                echo '<option value="' . $key . '" ' . (($category->getStatus() == $item) ? 'selected' : '') . '>' . $item . '</option>';
                             }
                             ?>
                         </select>
