--- a/MvcPractice/skin/css/header.css
+++ b/MvcPractice/skin/css/header.css
@@ -8,7 +8,7 @@ nav {
     /* Center items vertically in the flex container */
 }
 
-nav img {
+logo {
     max-height: 75px;
     margin-right: 24px;
     width: 107px;
