--- a/MvcPractice/app/design/Frontend/Template/page/header.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/header.phtml
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <img src="<?php echo $this->getImageUrl('logo1.png'); ?>" alt="Logo">
+        <img class="logo" src="<?php echo $this->getImageUrl('logo1.png'); ?>" alt="Logo">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
