banner_product_task_addtocart

--- a/MvcPractice/app/design/Frontend/Template/catalog/admin/Product/list.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/admin/Product/list.phtml
@@ -3,7 +3,7 @@ $productCollection = Mage::getModel('catalog/product')->getCollection();
 $categoryModel = Mage::getModel('catalog/category');
 $categoryNames = $categoryModel->getCategoryIdName();
 // $categoryCollection = Mage::getModel('catalog/category')->getCollection();
-$productCollection->addFieldToFilter('name', 'product 5');
+// $productCollection->addFieldToFilter('name', 'product 5');
 // $productCollection->addFieldToFilter('product_id', ['in' => [1, 2, 3]]);
 // $productCollection->addFieldToFilter('sku', ['like' => '%a']);
 ?>
