--- a/MvcPractice/app/design/Frontend/Template/banner/admin/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/banner/admin/form.phtml
@@ -1,9 +1,18 @@
+<?php
+$banner = $this->getBanner();
+
+?>
+
 <div class="box">
     <div class="container">
         <form action="<?php $this->getUrl('admin/banner/form') ?>" method="post">
+
+            <input type="hidden" name="banner[banner_id]" value="<?php echo $banner->getBannerId() ?>" id="title"
+                class="form-controll" />
             <div class="form-group">
                 <label for="title">Title </label>
-                <input type="text" name="banner[banner_title]" id="title" class="form-controll" />
+                <input type="text" name="banner[banner_title]" value="<?php echo $banner->getBannerTitle() ?>"
+                    id="title" class="form-controll" />
             </div>
             <div class="form-group file-area">
                 <label for="images">Images </label>
