--- a/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
@@ -12,18 +12,47 @@ $similerProduct = Mage::getModel('catalog/product')->getCollection()
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
 <link rel='stylesheet' href='https://sachinchoolur.github.io/lightslider/dist/css/lightslider.css'>
-<div class="container-fluid mt-2 mb-3">
-    <div class="row no-gutters">
-        <div class="col-md-5 pr-2">
-            <div class="card">
-                <div class="demo">
-                    <ul id="lightSlider">
-                        <li data-thumb="<?php echo $image ?>"> <img src="<?php echo $image ?>" />
+<form method="post" action="<?php echo $this->getUrl('sales/quote/add') ?>">
+    <div class="container-fluid mt-2 mb-3">
+        <div class="row no-gutters">
+            <div class="col-md-5 pr-2">
+                <div class="card">
+                    <div class="demo">
+                        <ul id="lightSlider">
+                            <li data-thumb="https://i.imgur.com/KZpuufK.jpg"> <img src=<?php echo $image ?> />
+                            </li>
+                            <!--  <li data-thumb="https://i.imgur.com/GwiUmQA.jpg"> <img src="https://i.imgur.com/GwiUmQA.jpg" />
                         </li>
-                    </ul>
+                        <li data-thumb="https://i.imgur.com/DhKkTrG.jpg"> <img src="https://i.imgur.com/DhKkTrG.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/kYWqL7k.jpg"> <img src="https://i.imgur.com/kYWqL7k.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/c9uUysL.jpg"> <img src="https://i.imgur.com/c9uUysL.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/KZpuufK.jpg"> <img src="https://i.imgur.com/KZpuufK.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/GwiUmQA.jpg"> <img src="https://i.imgur.com/GwiUmQA.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/DhKkTrG.jpg"> <img src="https://i.imgur.com/DhKkTrG.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/kYWqL7k.jpg"> <img src="https://i.imgur.com/kYWqL7k.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/c9uUysL.jpg"> <img src="https://i.imgur.com/c9uUysL.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/KZpuufK.jpg"> <img src="https://i.imgur.com/KZpuufK.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/GwiUmQA.jpg"> <img src="https://i.imgur.com/GwiUmQA.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/DhKkTrG.jpg"> <img src="https://i.imgur.com/DhKkTrG.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/kYWqL7k.jpg"> <img src="https://i.imgur.com/kYWqL7k.jpg" />
+                        </li>
+                        <li data-thumb="https://i.imgur.com/c9uUysL.jpg"> <img src="https://i.imgur.com/c9uUysL.jpg" />
+                        </li> -->
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <!-- <div class="card mt-2">
+                <!-- <div class="card mt-2">
                 <h6>Reviews</h6>
                 <div class="d-flex flex-row">
                     <div class="stars"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i>
@@ -42,9 +71,9 @@ $similerProduct = Mage::getModel('catalog/product')->getCollection()
                         <div class="d-flex flex-row align-items-center"> <img src="https://i.imgur.com/o5uMfKo.jpg"
                                 class="rounded-circle profile-image">
                             <div class="d-flex flex-column ml-1 comment-profile">
-                                <div class="comment-ratings"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-                                        class="fa fa-star"></i> <i class="fa fa-star"></i> </div> <span
-                                    class="username">Lori Benneth</span>
+                                <div class="comment-ratings"> <i class="fa fa-star"></i> <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i> <i class="fa fa-star"></i>
+                                </div> <span class="username">Lori Benneth</span>
                             </div>
                         </div>
                         <div class="date"> <span class="text-muted">2 May</span> </div>
@@ -54,70 +83,62 @@ $similerProduct = Mage::getModel('catalog/product')->getCollection()
                         <div class="d-flex flex-row align-items-center"> <img src="https://i.imgur.com/tmdHXOY.jpg"
                                 class="rounded-circle profile-image">
                             <div class="d-flex flex-column ml-1 comment-profile">
-                                <div class="comment-ratings"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-                                        class="fa fa-star"></i> <i class="fa fa-star"></i> </div> <span
-                                    class="username">Timona Simaung</span>
+                                <div class="comment-ratings"> <i class="fa fa-star"></i> <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i> <i class="fa fa-star"></i>
+                                </div> <span class="username">Timona Simaung</span>
                             </div>
                         </div>
                         <div class="date"> <span class="text-muted">12 May</span> </div>
                     </div>
                 </div>
             </div> -->
-        </div>
-        <div class="col-md-7">
-            <div class="card">
-                <!-- <div class="d-flex flex-row align-items-center">
-                    <div class="p-ratings">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <span class="ml-1">5.0</span>
-                </div> -->
-                <div class="about"> <span class="font-weight-bold">
-                        <?php echo $data->getProductName() ?>
-                    </span>
-                    <h4 class="font-weight-bold">
-                        <?php echo $data->getMinPrice() ?>
-                    </h4>
-                </div>
-                <div class="buttons">
-                    <button class="btn btn-outline-warning btn-long cart"> <a
-                            href="<?php echo $this->getUrl('sales/quote/add') ?>" title="Add to Cart"></button>
-                    <button class="btn btn-warning btn-long buy">Buy it Now</button>
-                    <button class="btn btn-light wishlist"> <i class="fa fa-heart"></i>
-                    </button>
-                </div>
-                <hr>
-                <div class="product-description">
-                    <div><span class="font-weight-bold">Color:</span><span>
-                            <?php echo $data->getColor() ?>
-                        </span></div>
-                    <div class="my-color">
-                        <label class="radio">
-                            <input type="radio" name="gender" value="MALE" checked>
-                            <span class="red"></span> </label>
-                        <label class="radio">
-                            <input type="radio" name="gender" value="FEMALE">
-                            <span class="blue"></span> </label>
-                        <label class="radio">
-                            <input type="radio" name="gender" value="FEMALE">
-                            <span class="green"></span> </label>
-                        <label class="radio">
-                            <input type="radio" name="gender" value="FEMALE">
-                            <span class="orange"></span> </label>
-                    </div>
+            </div>
+            <div class="col-md-7">
+                <div class="card">
                     <div class="d-flex flex-row align-items-center">
-                        <i class="fa fa-calendar-check-o"></i>
-                        <span class="ml-1">Delivery from sweden, 15-45 days</span>
+                        <div class="p-ratings"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
+                                class="fa fa-star"></i> <i class="fa fa-star"></i> </div> <span class="ml-1">5.0</span>
                     </div>
-                    <div class="mt-2">
-                        <span class="font-weight-bold">Description</span>
-                        <p>
-                            <?php echo $data->getDescription() ?>
-                        </p>
-                        <!--  <div class="bullets">
+                    <div class="about">
+                        <span class="font-weight-bold">
+                            <?php echo $data->getName() ?>
+                        </span>
+                        <h4 class="font-weight-bold">
+                            <?php echo $data->getMinPrice() ?>
+                        </h4>
+                        <span class="font-weight-bold">
+                            <input type="number" name="product[qty]">
+                            <input type="hidden" name="product[product_id]" value="<?php echo $data->getProductId() ?>">
+                        </span>
+                    </div>
+                    <div class="buttons">
+                        <input type="submit" value="Add to cart" class="btn btn-outline-warning btn-long cart">
+                        <!-- <button class="btn btn-warning btn-long buy">Buy it Now</button>
+                        <button class="btn btn-light wishlist"> <i class="fa fa-heart"></i> </button> -->
+                    </div>
+                    <hr>
+                    <div class="product-description">
+                        <div><span class="font-weight-bold">Color:</span><span> blue</span></div>
+                        <div class="my-color"> <label class="radio"> <input type="radio" name="gender" value="MALE"
+                                    checked>
+                                <span class="red"></span> </label> <label class="radio"> <input type="radio"
+                                    name="gender" value="FEMALE"> <span class="blue"></span> </label>
+                            <label class="radio"> <input type="radio" name="gender" value="FEMALE"> <span
+                                    class="green"></span>
+                            </label> <label class="radio"> <input type="radio" name="gender" value="FEMALE"> <span
+                                    class="orange"></span> </label>
+                        </div>
+                        <!-- <div class="d-flex flex-row align-items-center"> <i class="fa fa-calendar-check-o"></i> <span
+                            class="ml-1">Delivery from sweden, 15-45 days</span> </div> -->
+                        <div class="mt-2"> <span class="font-weight-bold">Description</span>
+                            <p>
+                                <?php echo $data->getDescription() ?>
+                            </p>
+
+                            <div>
+
+                            </div>
+                            <!-- <div class="bullets">
                             <div class="d-flex align-items-center"> <span class="dot"></span> <span
                                     class="bullet-text">Best in Quality</span> </div>
                             <div class="d-flex align-items-center"> <span class="dot"></span> <span
@@ -131,8 +152,8 @@ $similerProduct = Mage::getModel('catalog/product')->getCollection()
                             <div class="d-flex align-items-center"> <span class="dot"></span> <span
                                     class="bullet-text">Easy-access hydraulic storage</span> </div>
                         </div> -->
-                    </div>
-                    <!-- <div class="mt-2"> <span class="font-weight-bold">Store</span> </div>
+                        </div>
+                        <!-- <div class="mt-2"> <span class="font-weight-bold">Store</span> </div>
                     <div class="d-flex flex-row align-items-center"> <img src="https://i.imgur.com/N2fYgvD.png"
                             class="rounded-circle store-image">
                         <div class="d-flex flex-column ml-1 comment-profile">
@@ -141,43 +162,62 @@ $similerProduct = Mage::getModel('catalog/product')->getCollection()
                                 class="username">Rare Boutique</span> <small class="followers">25K Followers</small>
                         </div>
                     </div> -->
+                    </div>
                 </div>
-            </div>
-            <div class="card mt-2"> <span>Similar items:</span>
-                <div class="similar-products mt-2 d-flex flex-row">
-                    <?php foreach ($similerProduct->getData() as $_product) {
-                        ?>
-                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;">
-                            <img src="<?php echo Mage::getMediaUrl('product/' . $_product->getImageLink()); ?>"
-                                class="card-img-top" alt="...">
+                <div class="card mt-2"> <span>Similar items:</span>
+                    <div class="similar-products mt-2 d-flex flex-row">
+                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
+                                src="https://i.imgur.com/KZpuufK.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h6 class="card-title">
-                                    <?php echo $_product->getMinPrice() ?>
-                                </h6>
+                                <h6 class="card-title">$1,999</h6>
                             </div>
                         </div>
-                        <?php
-                    }
-                    ?>
+                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
+                                src="https://i.imgur.com/GwiUmQA.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-title">$1,699</h6>
+                            </div>
+                        </div>
+                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
+                                src="https://i.imgur.com/c9uUysL.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-title">$2,999</h6>
+                            </div>
+                        </div>
+                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
+                                src="https://i.imgur.com/kYWqL7k.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-title">$3,999</h6>
+                            </div>
+                        </div>
+                        <div class="card border p-1" style="width: 9rem;"> <img src="https://i.imgur.com/DhKkTrG.jpg"
+                                class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-title">$999</h6>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</form>
+
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 <script src='https://sachinchoolur.github.io/lightslider/dist/js/lightslider.js'></script>
 <script>
+
 </script>
 <script type='text/javascript'
     src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
-<script type='text/javascript' src=''></script>
-<script type='text/javascript' src=''></script>
-<script type='text/Javascript'></script>
-<!-- 
-$('#lightSlider').lightSlider({
+<script type='text/javascript' src=''>
+    $('#lightSlider').lightSlider({
         gallery: true,
         item: 1,
         loop: true,
         slideMargin: 0,
         thumbItem: 6
-    }); -->
+    });
+</script>
+<script type='text/javascript' src=''></script>
+<script type='text/Javascript'></script>
