--- a/MvcPractice/app/design/Frontend/Template/catalog/grid.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/grid.phtml
@@ -26,7 +26,7 @@ $product = Mage::getModel('catalog/product')->getCollection()
                                     title="Quick View">
                                     <i class="fas fa-eye"></i>
                                 </a>
-                                <a href="#" title="Add To Cart">
+                                <a href="" title="Add To Cart">
                                     <i class="fas fa-shopping-cart"></i>
                                 </a>
                                 <a href="#" title="Wishlist">
@@ -43,7 +43,7 @@ $product = Mage::getModel('catalog/product')->getCollection()
                                 <i class="far fa-star"></i>
                             </div>
                             <h3 class="product-name">
-                                <?php echo $product->getProdcutName() ?>
+                                <?php echo $product->getName() ?>
                             </h3>
                             <p class="product-price first">
                                 <?php echo $product->getPrice() ?>
