--- a/MvcPractice/skin/css/header.css
+++ b/MvcPractice/skin/css/header.css
@@ -8,8 +8,9 @@ nav {
     /* Center items vertically in the flex container */
 }
 
-logo {
-    max-height: 75px;
+.header_logo {
+    max-height: 40px;
+    height: 100%;
     margin-right: 24px;
     width: 107px;
     margin-left: 24px;
@@ -17,6 +18,7 @@ logo {
 }
 
 nav ul {
+
     list-style: none;
     margin: 0;
     padding: 0;
