--- a/MvcPractice/skin/css/productView.css
+++ b/MvcPractice/skin/css/productView.css
@@ -6,13 +6,11 @@ body {
 }
 
 .card {
-    background-color: #ffffff;
+    background-color: #fff;
     padding: 14px;
     border: none
 }
 
-/* 
-#lightSlider li {} */
 
 .demo {
     width: 100%
