--- a/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
@@ -166,36 +166,19 @@ $similerProduct = Mage::getModel('catalog/product')->getCollection()
                 </div>
                 <div class="card mt-2"> <span>Similar items:</span>
                     <div class="similar-products mt-2 d-flex flex-row">
-                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
-                                src="https://i.imgur.com/KZpuufK.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h6 class="card-title">$1,999</h6>
+                        <?php
+                        foreach ($similerProduct->getData() as $data) {
+                            ?>
+                            <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
+                                    src="<?php echo Mage::getMediaUrl('product/' . $data->getImageLink()); ?>"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h6 class="card-title">
+                                        <?php echo $data->getMinPrice() ?>
+                                    </h6>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
-                                src="https://i.imgur.com/GwiUmQA.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h6 class="card-title">$1,699</h6>
-                            </div>
-                        </div>
-                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
-                                src="https://i.imgur.com/c9uUysL.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h6 class="card-title">$2,999</h6>
-                            </div>
-                        </div>
-                        <div class="card border p-1" style="width: 9rem;margin-right: 3px;"> <img
-                                src="https://i.imgur.com/kYWqL7k.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h6 class="card-title">$3,999</h6>
-                            </div>
-                        </div>
-                        <div class="card border p-1" style="width: 9rem;"> <img src="https://i.imgur.com/DhKkTrG.jpg"
-                                class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h6 class="card-title">$999</h6>
-                            </div>
-                        </div>
+                        <?php } ?>
                     </div>
                 </div>
             </div>
